# repacked_magnum

./: CMakeLists.txt  README.md  conanfile.txt
Magnum/: CMakeLists.txt
Magnum/Animation/: CMakeLists.txt
Magnum/Audio/: CMakeLists.txt
Magnum/DebugTools/: CMakeLists copy.txt  CMakeLists.txt
Magnum/DebugTools/Implementation/: CMakeLists.txt
Magnum/GL/: CMakeLists.txt
Magnum/GL/Implementation/: CMakeLists.txt
Magnum/Implementation/: CMakeLists.txt
Magnum/Math/: CMakeLists.txt
Magnum/Math/Algorithms/: CMakeLists.txt
Magnum/Math/Implementation/: CMakeLists.txt
Magnum/MeshTools/: CMakeLists.txt  Compile.h
Magnum/MeshTools/Implementation/: CMakeLists.txt
Magnum/Platform/: CMakeLists.txt
Magnum/Platform/Implementation/: CMakeLists.txt
Magnum/Primitives/: CMakeLists.txt
Magnum/Primitives/Implementation/: CMakeLists.txt
Magnum/SceneGraph/: CMakeLists.txt
Magnum/ShaderTools/: CMakeLists.txt
Magnum/ShaderTools/Implementation/: CMakeLists.txt  spirv.h
Magnum/Shaders/: CMakeLists.txt
Magnum/Shaders/Implementation/: CMakeLists.txt
Magnum/Text/: CMakeLists.txt
Magnum/TextureTools/: CMakeLists.txt
Magnum/Trade/: CMakeLists.txt
Magnum/Trade/Implementation/: CMakeLists.txt
Magnum/Vk/: CMakeLists.txt
Magnum/Vk/Implementation/: CMakeLists.txt
MagnumExternal/OpenAL/: CMakeLists.txt
MagnumExternal/OpenGL/: CMakeLists.txt
MagnumExternal/OpenGL/GL/: CMakeLists.txt
MagnumExternal/OpenGL/GLES3/: CMakeLists.txt
MagnumExternal/OpenGL/KHR/: CMakeLists.txt
MagnumExternal/Vulkan/: CMakeLists.txt
MagnumPlugins/: CMakeLists.txt
MagnumPlugins/AnyAudioImporter/: CMakeLists.txt
MagnumPlugins/AnyImageConverter/: CMakeLists.txt
MagnumPlugins/AnyImageImporter/: CMakeLists.txt
MagnumPlugins/AnySceneConverter/: CMakeLists.txt
MagnumPlugins/AnySceneImporter/: CMakeLists.txt
MagnumPlugins/AnyShaderConverter/: CMakeLists.txt
MagnumPlugins/Implementation/: CMakeLists.txt
MagnumPlugins/MagnumFont/: CMakeLists.txt
MagnumPlugins/MagnumFontConverter/: CMakeLists.txt
MagnumPlugins/ObjImporter/: CMakeLists.txt
MagnumPlugins/TgaImageConverter/: CMakeLists.txt
MagnumPlugins/TgaImporter/: CMakeLists.txt
MagnumPlugins/WavAudioImporter/: CMakeLists.txt
cmake/: Sanitizers.cmake
