target_sources(${TARGET_NAME} PRIVATE
Mesh.h
Resource.cpp
Array.h
PixelFormat.cpp
ResourceManager.h
AbstractResourceLoader.h
Resource.h
Image.cpp
Sampler.cpp
Timeline.h
Types.h
DimensionTraits.h
VertexFormat.cpp
Tags.h
Sampler.h
Timeline.cpp
PixelStorage.cpp
PixelFormat.h
visibility.h
ImageView.cpp
Image.h
Magnum.h
FileCallback.cpp
FileCallback.h
Mesh.cpp
ImageView.h
VertexFormat.h
PixelStorage.h
British.h
)
add_subdirectory(MeshTools)
add_subdirectory(Text)
add_subdirectory(Implementation)
add_subdirectory(SceneGraph)
add_subdirectory(ShaderTools)
add_subdirectory(Primitives)
add_subdirectory(Audio)
add_subdirectory(Vk)
add_subdirectory(Math)
add_subdirectory(DebugTools)
add_subdirectory(Platform)
add_subdirectory(Animation)
add_subdirectory(Shaders)
if(MAGNUM_TARGET_GL)
    add_subdirectory(GL)    
endif()
add_subdirectory(Trade)
add_subdirectory(TextureTools)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/configure.h.cmake
${CMAKE_CURRENT_BINARY_DIR}/configure.h)
