add_subdirectory(AnyShaderConverter)
add_subdirectory(Implementation)
add_subdirectory(ObjImporter)
add_subdirectory(MagnumFontConverter)
add_subdirectory(MagnumFont)
add_subdirectory(TgaImporter)
add_subdirectory(TgaImageConverter)
add_subdirectory(AnySceneImporter)
add_subdirectory(AnyImageImporter)
if(WITH_AUDIO)
    add_subdirectory(AnyAudioImporter)
    add_subdirectory(WavAudioImporter)
endif()
add_subdirectory(AnySceneConverter)
add_subdirectory(AnyImageConverter)
