target_sources(${TARGET_NAME} PRIVATE
Mesh.h
GL.h
Framebuffer.cpp
PixelFormat.cpp
AbstractFramebuffer.h
Renderbuffer.h
Buffer.cpp
MultisampleTexture.h
Context.h
AbstractTexture.h
OpenGLTester.cpp
OpenGL.h
MeshView.h
MeshView.cpp
Version.h
CubeMapTextureArray.cpp
TextureArray.cpp
Sampler.cpp
Shader.cpp
Texture.h
Renderbuffer.cpp
Renderer.cpp
AbstractQuery.cpp
Shader.h
Texture.cpp
TransformFeedback.h
CubeMapTextureArray.h
Sampler.h
ImageFormat.h
TextureFormat.h
Version.cpp
DebugOutput.cpp
RenderbufferFormat.h
OpenGL.cpp
AbstractObject.cpp
Renderer.h
OpenGLTester.h
RectangleTexture.cpp
DefaultFramebuffer.h
PixelFormat.h
Extensions.h
visibility.h
DebugOutput.h
TransformFeedback.cpp
RectangleTexture.h
DefaultFramebuffer.cpp
Context.cpp
PrimitiveQuery.h
BufferTexture.h
MultisampleTexture.cpp
Buffer.h
Framebuffer.h
AbstractObject.h
AbstractShaderProgram.h
BufferImage.h
PrimitiveQuery.cpp
BufferTextureFormat.h
TextureFormat.cpp
AbstractTexture.cpp
AbstractFramebuffer.cpp
CubeMapTexture.h
Attribute.cpp
Mesh.cpp
AbstractQuery.h
Attribute.h
PipelineStatisticsQuery.h
TimeQuery.h
CubeMapTexture.cpp
BufferImage.cpp
SampleQuery.h
BufferTexture.cpp
AbstractShaderProgram.cpp
TextureArray.h
)
add_subdirectory(Implementation)
