target_sources(${TARGET_NAME} PRIVATE
PackingBatch.cpp
Angle.cpp
Matrix4.h
PackingBatch.h
Packing.h
Packing.cpp
Frustum.h
TypeTraits.h
Complex.h
Unit.h
Matrix3.h
Vector4.h
Range.h
Tags.h
Vector.h
DualComplex.h
Color.cpp
Color.h
BoolVector.h
Dual.h
Half.h
CubicHermite.h
Bezier.h
Vector3.h
RectangularMatrix.h
DualQuaternion.h
Functions.cpp
Functions.h
Angle.h
ConfigurationValue.h
instantiation.cpp
Quaternion.h
FunctionsBatch.h
Constants.h
Half.cpp
Vector2.h
Swizzle.h
StrictWeakOrdering.h
Matrix.h
Intersection.h
Distance.h
Math.h
)
add_subdirectory(Implementation)
add_subdirectory(Algorithms)
