target_sources(${TARGET_NAME} PRIVATE
Icosphere.cpp
UVSphere.h
Cone.cpp
Cube.cpp
Circle.cpp
Plane.h
Crosshair.cpp
Line.h
Cone.h
Plane.cpp
Cylinder.cpp
Gradient.cpp
UVSphere.cpp
Icosphere.h
Gradient.h
visibility.h
Square.h
Circle.h
Crosshair.h
Grid.cpp
Grid.h
Cylinder.h
Cube.h
Capsule.h
Capsule.cpp
Axis.cpp
Axis.h
Square.cpp
Line.cpp
)
add_subdirectory(Implementation)
