target_sources(${TARGET_NAME} PRIVATE
MeshObjectData2D.h
ImageData.h
AbstractSceneConverter.cpp
Data.cpp
FlatMaterialData.cpp
CameraData.h
AnimationData.cpp
LightData.h
PbrSpecularGlossinessMaterialData.h
AbstractMaterialData.h
ImageData.cpp
PbrMetallicRoughnessMaterialData.h
MeshObjectData3D.h
SkinData.cpp
AbstractSceneConverter.h
ObjectData2D.cpp
imageconverter.cpp
AbstractImageConverter.h
PbrClearCoatMaterialData.cpp
FlatMaterialData.h
AbstractImporter.h
MaterialData.cpp
visibility.h
AnimationData.h
MaterialLayerData.h
AbstractImporter.cpp
SceneData.h
ArrayAllocator.h
MeshObjectData2D.cpp
AbstractImageConverter.cpp
SkinData.h
MeshObjectData3D.cpp
ArrayAllocator.cpp
PhongMaterialData.cpp
LightData.cpp
MeshData.h
MeshData.cpp
SceneData.cpp
Trade.h
TextureData.h
ObjectData3D.h
PhongMaterialData.h
TextureData.cpp
PbrSpecularGlossinessMaterialData.cpp
Data.h
PbrMetallicRoughnessMaterialData.cpp
ObjectData2D.h
MaterialData.h
ObjectData3D.cpp
PbrClearCoatMaterialData.h
CameraData.cpp
)
add_subdirectory(Implementation)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/configure.h.cmake
${CMAKE_CURRENT_BINARY_DIR}/configure.h)
